--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             height: 80px; /* Increased size */
         }
         .hero-section {
-            background: url('assests/background.jpg') no-repeat center center;
+            background: url('assets/background.jpg') no-repeat center center;
             background-size: cover;
             color: white;
             padding: 100px 0;
@@ -64,7 +64,7 @@
             }
         }
         .about-section {
-        background: url('assests/about-us.jpg') no-repeat center center;
+        background: url('assets/about-us.jpg') no-repeat center center;
         background-size: cover;
         background-attachment: fixed; /*Optional: Parallax effect */
         padding: 100px 0;
@@ -92,7 +92,7 @@
 }
 /* Background Styling */
 .contact-section {
-        background: url('assests/about-us.jpg') no-repeat center center;
+        background: url('assets/about-us.jpg') no-repeat center center;
         background-size: cover;
         position: relative;
         color: white;
@@ -170,7 +170,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assests/LOGO.png" alt="Law Firm Logo" class="d-inline-block align-text-top">
+                <img src="assets/LOGO.png" alt="Law Firm Logo" class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -214,7 +214,7 @@
         <div class="row">
             <!-- Corporate Law Card -->
             <div class="col-md-4">
-                <div class="card h-100 shadow text-white" style="background: url('assests/corporate-law.jpg') no-repeat center center/cover;">
+                <div class="card h-100 shadow text-white" style="background: url('assets/corporate-law.jpg') no-repeat center center/cover;">
                     <div class="card-body d-flex flex-column justify-content-center text-center" style="backdrop-filter: brightness(50%); min-height: 200px;">
                         <h4 class="card-title">Corporate Law</h4>
                         <p class="card-text">Expert legal support for businesses.</p>
@@ -224,7 +224,7 @@
             
             <!-- Family Law Card -->
             <div class="col-md-4">
-                <div class="card h-100 shadow text-white" style="background: url('assests/family-law.jpg') no-repeat center center/cover;">
+                <div class="card h-100 shadow text-white" style="background: url('assets/family-law.jpg') no-repeat center center/cover;">
                     <div class="card-body d-flex flex-column justify-content-center text-center" style="backdrop-filter: brightness(50%); min-height: 200px;">
                         <h4 class="card-title">Family Law</h4>
                         <p class="card-text">Guiding you through personal legal matters.</p>
@@ -234,7 +234,7 @@
 
             <!-- Criminal Law Card -->
             <div class="col-md-4">
-                <div class="card h-100 shadow text-white" style="background: url('assests/criminal-law.jpg') no-repeat center center/cover;">
+                <div class="card h-100 shadow text-white" style="background: url('assets/criminal-law.jpg') no-repeat center center/cover;">
                     <div class="card-body d-flex flex-column justify-content-center text-center" style="backdrop-filter: brightness(50%); min-height: 200px;">
                         <h4 class="card-title">Criminal Law</h4>
                         <p class="card-text">Defending your rights with dedication.</p>
